use 8 threads, turn on detailed json reporting for jmh sort benchy